<fix>[sns]: emay sms i18n
emay sms i18n

Resolves: ZSTAC-66459

Change-Id: I64686973667975687161756b72686a6362677174

--- a/conf/i18n/messages_en_US.properties
+++ b/conf/i18n/messages_en_US.properties
@@ -4312,7 +4312,7 @@ resource\ types\ %s\ are\ not\ supported\ by\ directory,\ allowed\ types\ are\ %
 
 # at: src/main/java/org/zstack/directory/DirectoryApiInterceptor.java:129
 # args: 
-name\ contains\ unsupported\ characters,\ name\ can\ only\ contain\ Chinese\ characters,\ English\ letters,\ numbers,\ spaces,\ and\ the\ following\ characters\:\ ()（）【】@._-+\  = name contains unsupported characters, name can only contain Chinese characters, English letters, numbers, spaces, and the following characters: ()（）【】@._-+ 
+name\ contains\ unsupported\ characters,\ name\ can\ only\ contain\ Chinese\ characters,\ English\ letters,\ numbers,\ spaces,\ and\ the\ following\ characters\:\ ()\uFF08\uFF09\u3010\u3011@._-+\  = name contains unsupported characters, name can only contain Chinese characters, English letters, numbers, spaces, and the following characters: ()\uFF08\uFF09\u3010\u3011@._-+ 
 
 # at: src/main/java/org/zstack/directory/DirectoryBase.java:356
 # args: msg.getDirectoryUuid(),msg.getTargetParentUuid()
@@ -5744,7 +5744,7 @@ no\ backup\ storage\ specified\ in\ uuids%s\ is\ available\ for\ adding\ this\ i
 
 # at: src/main/java/org/zstack/image/ImageApiInterceptor.java:180
 # args: 
-url\ must\ starts\ with\ 'file\:///',\ 'http\://',\ 'https\://'，\ 'ftp\://',\ 'sftp\://'\ or\ '/' = url must starts with 'file:///', 'http://', 'https://'， 'ftp://', 'sftp://' or '/'
+url\ must\ starts\ with\ 'file\:///',\ 'http\://',\ 'https\://'\uFF0C\ 'ftp\://',\ 'sftp\://'\ or\ '/' = url must starts with 'file:///', 'http://', 'https://'\uFF0C 'ftp://', 'sftp://' or '/'
 
 # at: src/main/java/org/zstack/image/ImageApiInterceptor.java:191
 # args: path
@@ -13416,7 +13416,7 @@ virtual\ id[uuid\:%s]\ not\ belong\ to\ project[uuid\:%s] = virtual id[uuid:{0}]
 
 # at: src/main/java/org/zstack/twoFactorAuthentication/TwoFactorAuthenticationIAM2Backend.java:42
 # args: loginType
-Unsupported\ AccountType：%s = Unsupported AccountType：{0}
+Unsupported\ AccountType\uFF1A%s = Unsupported AccountType\uFF1A{0}
 
 # at: src/main/java/org/zstack/twoFactorAuthentication/TwoFactorAuthenticationManagerImpl.java:124
 # args: 
@@ -14696,11 +14696,11 @@ Sms\ template\ code\ is\ a\ string\ with\ 13\ characters.\ Got\ event\ template\
 
 # at: src/main/java/org/zstack/zwatch/alarm/sns/TextTemplateFactory.java:31
 # args: type
-no\ template\ of\ this\ type：%s,\  = no template of this type：{0}, 
+no\ template\ of\ this\ type\uFF1A%s,\  = no template of this type\uFF1A{0}, 
 
 # at: src/main/java/org/zstack/zwatch/alarm/sns/TextTemplateFactory.java:43
 # args: e.getMessage()
-template\ error：%s = template error：{0}
+template\ error\uFF1A%s = template error\uFF1A{0}
 
 # at: src/main/java/org/zstack/zwatch/alarm/system/SystemAlarmManagerImpl.java:1471
 # args: DATA_DIR_CAPACITY_ALARM_uuid
@@ -15033,3 +15033,7 @@ on\ purpose\ 2 = on purpose 2
 # at:src/main/java/org/zstack/identity/AccountLoginBackend.java:64
 # args:
 wrong\ account\ name\ or\ password = wrong account name or password
+
+# at: src/main/java/org/zstack/sns/platform/universalsms/SNSUniversalSmsEndpoint.java:166
+# args:
+Failed\ to\ validate\ universal\ sms = Failed to validate universal sms
