<feature>[core]: replace globalProperty:locale with global config: locale
GlobalConfigImpact

Resolves: ZSTAC-66347

Change-Id: I6c6f77646a696b78626777616f63616b617a7371

--- a/conf/i18n/messages_en_US.properties
+++ b/conf/i18n/messages_en_US.properties
@@ -4858,9 +4858,9 @@ can\ not\ set\ FT\ on\ vm[uuid\:%s]\ because\ there\ are\ usb\ devices\ attached
 # args: msg.getUuid()
 can\ not\ set\ FT\ on\ vmm[uuid\:%s]\ since\ mdev\ device\ attached = can not set FT on vmm[uuid:{0}] since mdev device attached
 
-# at: src/main/java/org/zstack/ha/HaKvmHostSiblingChecker.java:257
-# args: struct.getHostUuid(),struct.getHostIp()
-hosts\ failed\ to\ port\ scan\ the\ failure\ host[uuid\:%s,\ ip\:%s] = hosts failed to port scan the failure host[uuid:{0}, ip:{1}]
+# at: src/main/java/org/zstack/ha/HaKvmHostSiblingChecker.java:237
+# args: struct.getHostUuid(),struct.getHostIp(),errors
+hosts\ failed\ to\ port\ scan\ the\ failure\ host[uuid\:%s,\ ip\:%s],\ errors\ are\ %s = hosts failed to port scan the failure host[uuid:{0}, ip:{1}], errors are {2}
 
 # at: src/main/java/org/zstack/ha/HaKvmWorker.java:96
 # args: checkers.indexOf(checker) + 1,checkers.size(),checker.getClass().getSimpleName(),s.getSuccessTimes() * s.getSuccessInterval()
@@ -4930,13 +4930,13 @@ VM[%s]\ is\ paused\ on\ host[%s] = VM[{0}] is paused on host[{1}]
 # args: vm.getHypervisorType()
 the\ hypervisor[%s]\ does\ not\ support\ VM\ HA = the hypervisor[{0}] does not support VM HA
 
-# at: src/main/java/org/zstack/ha/HostCheckResult.java:59
-# args: ratio,threshold,hostUuid,errors
-[HA\ Worker]\:\ the\ success\ ratio[%s]\ below\ the\ threshold[%s],\ the\ host[uuid\:%s]\ is\ judged\ as\ dead,\ errors\ are\ %s.\ Start\ HA\ all\ the\ vms\ on\ this\ host\ before = [HA Worker]: the success ratio[{0}] below the threshold[{1}], the host[uuid:{2}] is judged as dead, errors are {3}. Start HA all the vms on this host before
+# at: src/main/java/org/zstack/ha/HostCheckResult.java:89
+# args: hostUuid
+the\ host[uuid\:%s]\ is\ alive,\ no\ HA\ required.\ The\ host\ will\ be\ reconnected\ soon = the host[uuid:{0}] is alive, no HA required. The host will be reconnected soon
 
-# at: src/main/java/org/zstack/ha/HostCheckResult.java:56
-# args: ratio,threshold
-[HA\ worker]\:\ all\ host\ checkers\ are\ finished\ and\ the\ success\ ratio\ is\ %s\ that\ is\ greater\ than\ the\ threshold[%s];\ no\ HA\ need\ for\ the\ vms\ on\ this\ host\ before.\ Please\ wait\ for\ the\ host\ reconnected = [HA worker]: all host checkers are finished and the success ratio is {0} that is greater than the threshold[{1}]; no HA need for the vms on this host before. Please wait for the host reconnected
+# at: src/main/java/org/zstack/ha/HostCheckResult.java:92
+# args: hostUuid,errors
+the\ host[uuid\:%s]\ is\ dead.\ (%s)\ The\ vm\ on\ this\ host\ start\ HA = the host[uuid:{0}] is dead. error is {1}. The vm on this host start HA
 
 # at: src/main/java/org/zstack/ha/NeverStopVmGC.java:102
 # args: 
@@ -15030,10 +15030,6 @@ on\ purpose\ 1 = on purpose 1
 # args: 
 on\ purpose\ 2 = on purpose 2
 
-# at:src/main/java/org/zstack/identity/AccountLoginBackend.java:64
-# args:
-wrong\ account\ name\ or\ password = wrong account name or password
-
 # at: src/main/java/org/zstack/sns/platform/universalsms/SNSUniversalSmsEndpoint.java:166
-# args:
+# args: 
 Failed\ to\ validate\ universal\ sms = Failed to validate universal sms
