--- a/conf/i18n/messages_zh_CN.properties
+++ b/conf/i18n/messages_zh_CN.properties
@@ -4858,9 +4858,9 @@ can\ not\ set\ FT\ on\ vm[uuid\:%s]\ because\ there\ are\ usb\ devices\ attached
 # args: msg.getUuid()
 can\ not\ set\ FT\ on\ vmm[uuid\:%s]\ since\ mdev\ device\ attached = 无法在VMM[uuid：{0}]上设置FT，因为已连接MDEV设备
 
-# at: src/main/java/org/zstack/ha/HaKvmHostSiblingChecker.java:257
-# args: struct.getHostUuid(),struct.getHostIp()
-hosts\ failed\ to\ port\ scan\ the\ failure\ host[uuid\:%s,\ ip\:%s] = 扫描IP为{1}的主机端口失败
+# at: src/main/java/org/zstack/ha/HaKvmHostSiblingChecker.java:237
+# args: struct.getHostUuid(),struct.getHostIp(),errors
+hosts\ failed\ to\ port\ scan\ the\ failure\ host[uuid\:%s,\ ip\:%s],\ errors\ are\ %s = 扫描物理机失败[uuid:{0}, ip:{1}]，错误原因是 {2}
 
 # at: src/main/java/org/zstack/ha/HaKvmWorker.java:96
 # args: checkers.indexOf(checker) + 1,checkers.size(),checker.getClass().getSimpleName(),s.getSuccessTimes() * s.getSuccessInterval()
@@ -4930,13 +4930,13 @@ VM[%s]\ is\ paused\ on\ host[%s] = 物理机[{1}]上的云主机[{0}]已暂停
 # args: vm.getHypervisorType()
 the\ hypervisor[%s]\ does\ not\ support\ VM\ HA = 当前云主机监视器(hypervisor)[{0}]不支持VM HA
 
-# at: src/main/java/org/zstack/ha/HostCheckResult.java:59
-# args: ratio,threshold,hostUuid,errors
-[HA\ Worker]\:\ the\ success\ ratio[%s]\ below\ the\ threshold[%s],\ the\ host[uuid\:%s]\ is\ judged\ as\ dead,\ errors\ are\ %s.\ Start\ HA\ all\ the\ vms\ on\ this\ host\ before = [HA Worker]：成功率[{0}]低于阈值[{1}]，物理机[uuid：{2}]被判断为死，错误为{3}。之前在此物理机上启动所有云主机的HA
+# at: src/main/java/org/zstack/ha/HostCheckResult.java:89
+# args: hostUuid
+the\ host[uuid\:%s]\ is\ alive,\ no\ HA\ required.\ The\ host\ will\ be\ reconnected\ soon = UUID为{0}的主机将被重连，其上的虚拟机暂时不触发高可用
 
-# at: src/main/java/org/zstack/ha/HostCheckResult.java:56
-# args: ratio,threshold
-[HA\ worker]\:\ all\ host\ checkers\ are\ finished\ and\ the\ success\ ratio\ is\ %s\ that\ is\ greater\ than\ the\ threshold[%s];\ no\ HA\ need\ for\ the\ vms\ on\ this\ host\ before.\ Please\ wait\ for\ the\ host\ reconnected = [HA Worker]：所有物理机检查器都已完成，成功率为{0}，大于阈值[{1}]。以前，此物理机上的云主机不需要HA。请等待物理机重新连接
+# at: src/main/java/org/zstack/ha/HostCheckResult.java:92
+# args: hostUuid,errors
+the\ host[uuid\:%s]\ is\ dead.\ (%s)\ The\ vm\ on\ this\ host\ start\ HA = UUID为{0}的主机短时间无法重连上，错误是{1}。现在上面的虚拟机触发高可用
 
 # at: src/main/java/org/zstack/ha/NeverStopVmGC.java:102
 # args: 
@@ -8380,7 +8380,7 @@ can\ not\ get\ service\ providerType\ for\ load\ balancer\ listener\ [uuid\:%s] 
 
 # at: src/main/java/org/zstack/network/service/lb/LoadBalancerBase.java:1384
 # args: self.getUuid(),self.getProviderType(),providerType
-service\ provider\ type\ mismatching.\ The\ load\ balancer[uuid\:%s]\ is\ provided\ by\ the\ service\ provider[type\:%s],\ but\ new\ service\ provider\ is\ [type\:\ %s] = 服务提供商类型不匹配。负载平衡器[uuid：{0}]由服务提供程序[类型：{1}]提供，但新服务提供程序为[类型：{2}]
+service\ provider\ type\ mismatching.\ The\ load\ balancer[uuid\:%s]\ is\ provided\ by\ the\ service\ provider[type\:%s],\ but\ new\ service\ provider\ is\ [type\:\ %s] = 服务提供商类型不匹配。负载均衡器[uuid：{0}]由服务提供程序[类型：{1}]提供，但新服务提供程序为[类型：{2}]
 
 # at: src/main/java/org/zstack/network/service/lb/LoadBalancerBase.java:1486
 # args: msg.getLoadBalancerPort(),msg.getLoadBalancerUuid()
@@ -15028,12 +15028,8 @@ on\ purpose\ 1 =
 
 # at: src/test/java/org/zstack/test/core/asyncbackup/TestSafeCompletion.java:83
 # args: 
-on\ purpose\ 2 =
-
-# at: src/main/java/org/zstack/identity/AccountLoginBackend.java:64
-# args:
-wrong\ account\ name\ or\ password = 错误信息: 错误的帐号或密码
+on\ purpose\ 2 = 
 
 # at: src/main/java/org/zstack/sns/platform/universalsms/SNSUniversalSmsEndpoint.java:166
-# args:
+# args: 
 Failed\ to\ validate\ universal\ sms = 发送测试短信失败
