<fix>[conf]: modify default code of SysErros.INTERNAL
The default code of SysErros.INTERNAL is 1000, which
causes code conflicts with many other error types
that cannot normally enable i18n for translation.

Resolves: ZSV-5789

Change-Id: I727663787a7871676864686766706577796e7a67

--- a/conf/i18n/messages_en_US.properties
+++ b/conf/i18n/messages_en_US.properties
@@ -14853,3 +14853,11 @@ unable\ to\ allocate\ hosts;\ due\ to\ pagination\ is\ enabled,\ there\ might\ b
 # at:src/main/java/org/zstack/identity/AccountLoginBackend.java:64
 # args:
 wrong\ account\ name\ or\ password = wrong account name or password
+
+# at: src/main/java/org/zstack/storage/primary/sharedblock/SharedBlockGroupPrimaryStorageBase.java:1145
+# args: finalClusterUuids
+failed\ to\ connect\ to\ all\ clusters%s = failed to connect to all clusters[{0}]
+
+# at: src/main/java/org/zstack/kvm/KVMHost.java:4295
+# args: spec.getVmInventory().getUuid(), spec.getVmInventory().getName(),self.getUuid(), self.getManagementIp()
+failed\ to\ start\ vm[uuid\:%s\ name\:%s]\ on\ kvm\ host[uuid\:%s,\ ip\:%s],\ because\ %s = failed to start vm[uuid:{0} name:{1}] on kvm host[uuid:{2}, ip:{3}], because [{4}]
