--- a/conf/i18n/messages_zh_CN.properties
+++ b/conf/i18n/messages_zh_CN.properties
@@ -14765,3 +14765,11 @@ unable\ to\ allocate\ hosts;\ due\ to\ pagination\ is\ enabled,\ there\ might\ b
 # at: src/main/java/org/zstack/identity/AccountLoginBackend.java:64
 # args:
 wrong\ account\ name\ or\ password = 错误信息: 错误的帐号或密码
+
+# at: src/main/java/org/zstack/storage/primary/sharedblock/SharedBlockGroupPrimaryStorageBase.java:1145
+# args: finalClusterUuids
+failed\ to\ connect\ to\ all\ clusters%s = 无法连接到所有的集群[{0}]
+
+# at: src/main/java/org/zstack/kvm/KVMHost.java:4295
+# args: spec.getVmInventory().getUuid(), spec.getVmInventory().getName(),self.getUuid(), self.getManagementIp(), ret.getError()
+failed\ to\ start\ vm[uuid\:%s\ name\:%s]\ on\ kvm\ host[uuid\:%s,\ ip\:%s],\ because\ %s = 无法在物理机[uuid: {2}, ip:{3}]上启动虚拟机[uuid：{0}，name：{1}]，因为[{4}]
