<fix>[conf]: update i18n
Resolves: ZSV-5344

Change-Id: I78686c6e796b7779697075686a68677362687565

--- a/conf/i18n/messages_en_US.properties
+++ b/conf/i18n/messages_en_US.properties
@@ -2602,9 +2602,9 @@ host[uuid\:%s,\ name\:%s]\ is\ in\ state[%s],\ cannot\ perform\ required\ operat
 # args: ret.getError()
 operation\ error,\ because\ %s = operation error, because {0}
 
-# at: src/main/java/org/zstack/compute/host/MevocoHostBase.java:370
-# args: l3Uuid,msg.getHostUuid()
-failed\ to\ allocate\ pci\ device\ for\ l3[uuid\:%s]\ on\ host[uuid\:%s] = failed to allocate pci device for l3[uuid:{0}] on host[uuid:{1}]
+# at: src/main/java/org/zstack/compute/host/MevocoHostBase.java:405
+# args: msg.getHostUuid()
+failed\ to\ allocate\ pci\ device\ on\ host[uuid\:%s],\ because\ there\ are\ not\ enough\ pci\ devices\ available = failed to allocate pci device on host[uuid:{0}], because there are not enough pci devices available
 
 # at: src/main/java/org/zstack/compute/host/MevocoHostBase.java:622
 # args: msg.getNetworkInterfaceName(),msg.getHostUuid()
