--- a/conf/i18n/messages_zh_CN.properties
+++ b/conf/i18n/messages_zh_CN.properties
@@ -2602,9 +2602,9 @@ host[uuid\:%s,\ name\:%s]\ is\ in\ state[%s],\ cannot\ perform\ required\ operat
 # args: ret.getError()
 operation\ error,\ because\ %s = 操作错误，因为{0}
 
-# at: src/main/java/org/zstack/compute/host/MevocoHostBase.java:370
-# args: l3Uuid,msg.getHostUuid()
-failed\ to\ allocate\ pci\ device\ for\ l3[uuid\:%s]\ on\ host[uuid\:%s] = 无法为物理机[uuid：{1}]上的L3[uuid：{0}]分配PCI设备
+# at: src/main/java/org/zstack/compute/host/MevocoHostBase.java:405
+# args: msg.getHostUuid()
+failed\ to\ allocate\ pci\ device\ on\ host[uuid\:%s],\ because\ there\ are\ not\ enough\ pci\ devices\ available = 无法为物理机[uuid：{0}]分配PCI设备，因为可用PCI设备不足
 
 # at: src/main/java/org/zstack/compute/host/MevocoHostBase.java:622
 # args: msg.getNetworkInterfaceName(),msg.getHostUuid()
